--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <body>
 <h1> Hello shezan </h1>
 <p> Life is pain </p>
+<h2 tittle = "this is second heading"> Hiiii</h2>
 <p>  another pain </p>
-
+<p> <b>hello</b></p>
+<p tittle = "johon 'don' cina"> don in a  single quote</p>
+<p tittle = 'johon "cina"'><b> cina in double quote</b></p>
 </body>
 </html>
